[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sievellm"
version = "0.3.0"
description = "Smart AI router — filters requests to the right model, saving 40-80% on costs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Kyle Densley" }
]
keywords = ["ai", "llm", "openai", "router", "cost-optimization", "sieve"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openai>=1.0.0",
]

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.18.0",
]
all = [
    "anthropic>=0.18.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "anthropic>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/kyledensley/sieve"

[tool.hatch.build.targets.wheel]
packages = ["src/sieve"]
